--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,36 @@ img {
     .lessons .col {
         width: 80%;
     }
-
+    .steps {
+        margin-bottom: 0rem;
+    }
+    .steps .row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .steps .col {
+        width: 80%;
+    }
+    .steps .card {
+        padding-bottom: 3rem;
+    }
+    .steps .col:last-child {
+        margin-bottom: -3rem;
+    }
+    .why-us {
+        background-color: #222222;
+        padding-top: 3rem;
+    }
+    .why-us .row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .why-us .col-right, .why-us .col-left {
+        width: 78%;
+    }
+    .why-us img {
+        margin-bottom: 4rem;
+    }
 
 }
 
