--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
+ @media screen and (max-width: 1160px) {
+    main .container {
+        width: 90%;
+    }
+}
+
  @media screen and (max-width: 768px) {
     .site-header {
         margin: 0 auto; 
@@ -184,6 +190,5 @@ img {
     .why-us img {
         margin-bottom: 4rem;
     }
-
 }
 
